<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/app_length"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/Length_Edittext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/app_defaultHeight"
            android:inputType="number" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/app_weight"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/Weight_Edittext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/app_defaultWeight"
            android:inputType="number" />
    </LinearLayout>

    <Button
        android:id="@+id/button_Cal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="calClick"
        android:text="@string/app_button" />

    <TextView
        android:id="@+id/Output_Textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/range_Textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/Author_introdution"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="NextPage"
        android:text="@string/app_MyInformation" />

</LinearLayout>